fix horizontal scroll

--- a/src/portal/content/less/app/entity-viewer.less
+++ b/src/portal/content/less/app/entity-viewer.less
@@ -66,3 +66,7 @@
   }
 
 }
+
+.g-column-bottom-row {
+  position: relative;
+}
